Fixed issue where video was too wide.

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ ul {
 #backgroundVideo {
     position: absolute;
     z-index: -10;
-    min-width: 100%;
+    width: 100%;
     min-height: 100%;
 }
 
